-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.1
-
None
-
Archlinux + Sway
-
-
e17498261 (dev), d74c6888d (6.10), f0d9b41d9 (6.9), e9210a232 (tqtc/lts-6.8)
When selecting large text (>= 65512 characters) in a textarea field, simplebrowser crashes with:
wl_display#1: error 1: invalid arguments for zwp_text_input_v3#17.set_surrounding_text
The Wayland connection experienced a fatal error: Invalid argument
Example page: https://qutebrowser.org/wayland-repro.html
| For Gerrit Dashboard: QTBUG-137727 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 663297,1 | client textinputv3: keep surroundingText under 4000 bytes | tqtc/lts-6.5 | qt/tqtc-qtwayland | Status: NEW | +2 | 0 |
| 653675,3 | wayland/textinputv3: keep surroundingText under 4000 bytes | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 653799,2 | wayland/textinputv3: keep surroundingText under 4000 bytes | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 655977,2 | client textinputv3: keep surroundingText under 4000 bytes | 6.9 | qt/qtwayland | Status: MERGED | +2 | 0 |
| 663252,2 | client textinputv3: keep surroundingText under 4000 bytes | tqtc/lts-6.8 | qt/tqtc-qtwayland | Status: MERGED | +2 | 0 |