wayland/textinputv3: keep surroundingText under 4000 bytes

It amends f9c879bee935ab260fd0683ae758757bdff4480c.
When the selection is over the maximum size,
the text must be clipped.

Fixes: QTBUG-137727
Change-Id: I2cda4d7687916b231b71bdf4714b0776817dea0c
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit e17498261dab73847b14178870082ae8fd55bc09)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>